--- a/style.css
+++ b/style.css
@@ -122,7 +122,7 @@ body {
   top: 0;
   left: 0;
   width: 100vw;
-  height: 200%;
+  height: 100vh;
 
   margin: 0;
   background-color: rgba(0, 0, 0, 0.6);
